# switch_script_gitlab

./: .gitignore  conf.txt  login_issues.csv  main.py  pyproject.toml
output/main/: conf.txt  login_issues.csv
output/main/cryptography-41.0.1.dist-info/: RECORD
