[tool.poetry]
name = "switch-script-gitlab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "switch_script_gitlab"}]

[tool.poetry.dependencies]
python = "^3.11"
netmiko = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
